--- a/ej-cypress/index.html
+++ b/ej-cypress/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +23,9 @@
     }
   </style>
 </head>
+
 <body>
+<!--
   <div class="center">
     <h2 id="titulo">Listados</h2>
     <div>
@@ -38,6 +41,28 @@
       </ul>
     </div>
   </div>
+-->
+
+  <div class="center">
+    <div id="caja-retry-ability"></div>
+  </div>
+
+
+  <script>
+    const btn3500 = document.createElement('button');
+    btn3500.id = "btn-lazy-3500";
+    btn3500.innerText = 'Soy un botón perezoso';
+    setTimeout(() => {
+      document.getElementById('caja-retry-ability').appendChild(btn3500);
+    }, 3500);
+    const btn5500 = document.createElement('button');
+    btn5500.id = "btn-lazy-5500";
+    btn5500.innerText = 'Soy un botón más perezoso todavía';
+    setTimeout(() => {
+      document.getElementById('caja-retry-ability').appendChild(btn5500);
+    }, 5500);
+  </script>
+
 </body>
 
 </html>
