--- a/ej-cypress/index.html
+++ b/ej-cypress/index.html
@@ -22,6 +22,28 @@
       align-items: center;
     }
   </style>
+
+  <style>
+    body {
+      height: 100vh;
+      width: 100vw;
+      background-color: #242424;
+  }
+    .center {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+    #caja-doble-click {
+      width: 100px;
+      height: 100px;
+      background-color: blue;
+  }
+    #caja-doble-click.db-clicked {
+      background-color: yellow;
+  }
+  </style>
 </head>
 
 <body>
@@ -42,12 +64,10 @@
     </div>
   </div>
 -->
-
+<!--
   <div class="center">
     <div id="caja-retry-ability"></div>
   </div>
-
-
   <script>
     const btn3500 = document.createElement('button');
     btn3500.id = "btn-lazy-3500";
@@ -62,6 +82,33 @@
       document.getElementById('caja-retry-ability').appendChild(btn5500);
     }, 5500);
   </script>
+-->
+<!--
+  <div class="center">
+    <div id="caja-doble-click"></div>
+  </div>
+  <script>
+    document.getElementById('caja-doble-click').addEventListener('dblclick', (event) => {
+      event.target.className = event.target.className.includes('db-clicked') ? '' : 'db-clicked';
+  })
+  </script>
+-->
+
+  <div class="center">
+    <select id="select-coches-electricos">
+      <option value="polestar-2">Polestar 2</option>
+      <option value="nio-et7">Nio eT7</option>
+      <option value="tesla-model-3">Tesla Model 3</option>
+      <option value="xpeng-p7">Xpeng P7</option>
+    </select>
+
+    <select id="select-coches-electricos-multiple" multiple>
+      <option value="polestar-2">Polestar 2</option>
+      <option value="nio-et7">Nio eT7</option>
+      <option value="tesla-model-3">Tesla Model 3</option>
+      <option value="xpeng-p7">Xpeng P7</option>
+    </select>
+  </div>
 
 </body>
 
